// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionList renders SectionsList with just items 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "text": "1",
          },
          Object {
            "text": "2",
          },
          Object {
            "text": "3",
          },
          Object {
            "text": "4",
          },
        ],
        "title": "Numbers",
      },
      Object {
        "data": Array [
          Object {
            "text": "A",
          },
          Object {
            "text": "B",
          },
          Object {
            "text": "C",
          },
          Object {
            "text": "D",
          },
        ],
        "title": "Letters",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      6,
    ]
  }
  style={Object {}}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        1
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        2
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        3
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        4
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        A
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        B
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        C
      </Text>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`SectionList renders SectionsList with section header and items 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "text": "1",
          },
          Object {
            "text": "2",
          },
          Object {
            "text": "3",
          },
          Object {
            "text": "4",
          },
        ],
        "title": "Numbers",
      },
      Object {
        "data": Array [
          Object {
            "text": "A",
          },
          Object {
            "text": "B",
          },
          Object {
            "text": "C",
          },
          Object {
            "text": "D",
          },
        ],
        "title": "Letters",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      6,
    ]
  }
  style={Object {}}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        Numbers
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        1
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        2
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        3
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        4
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        Letters
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        A
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        B
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        C
      </Text>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;
